zoc/src/typecheck/tests/snapshots/zoc__typecheck__tests__erasability__ng_1_variant_erasable_with_nonerasable_vcon_def_param_types_to_nonerasable.snap
---
source: zoc/src/typecheck/tests/erasability.rs
expression: pretty_printed_err
---
TypeError::MatcheeTypeTypeIsErasableButReturnTypeTypeIsNotErasable {
    match_: (
        match
        1
        1
        (
            ind
            Set0
            "Bool"
            ()
            (
                (
                    ()
                    ()
                )
                (
                    ()
                    ()
                )
            )
        )
        (
            (
                1
                0
            )
        )
    )@(ByteIndex(156)..ByteIndex(238)),
    matchee_type_type: Prop0,
    match_return_type_type: Set0,
}
