zoc/src/typecheck/tests/snapshots/zoc__typecheck__tests__erasability__ng_2_variant_erasable_to_nonerasable.snap
---
source: zoc/src/typecheck/tests/erasability.rs
expression: pretty_printed_err
---
TypeError::MatcheeTypeTypeIsErasableButReturnTypeTypeIsNotErasable {
    match_: (
        match
        (
            vcon
            (
                ind
                Prop0
                "Bool"
                ()
                (
                    (
                        ()
                        ()
                    )
                    (
                        ()
                        ()
                    )
                )
            )
            0
        )
        1
        (
            ind
            Set0
            "Bool"
            ()
            (
                (
                    ()
                    ()
                )
                (
                    ()
                    ()
                )
            )
        )
        (
            (
                0
                (
                    vcon
                    (
                        ind
                        Set0
                        "Bool"
                        ()
                        (
                            (
                                ()
                                ()
                            )
                            (
                                ()
                                ()
                            )
                        )
                    )
                    0
                )
            )
            (
                0
                (
                    vcon
                    (
                        ind
                        Set0
                        "Bool"
                        ()
                        (
                            (
                                ()
                                ()
                            )
                            (
                                ()
                                ()
                            )
                        )
                    )
                    1
                )
            )
        )
    )@(ByteIndex(1)..ByteIndex(257)),
    matchee_type_type: Prop0,
    match_return_type_type: Set0,
}
